--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 document.oncontextmenu=new Function("return false") 
 document.onselectstart=new Function("return false") 
 </script> 
-<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=0 height=0 src="https://Fplyth0ner-Combie.github.io/music/1.mp3"></iframe>
+<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=0 height=0 src="music/1.mp3"></iframe>
 
 	<!-- Preloader 
 	<div class="mask"><div id="loader"></div></div>
