--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link href='css/first.css' rel='stylesheet' type='text/css' />    
     <link href='css/second.css' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<audio autoplay="autoplay" loop="loop" preload="auto" src="https://Fplyth0ner-Combie.github.io/music/1.mp3"></audio>
    
 
 </head>
@@ -28,7 +29,7 @@
 document.oncontextmenu=new Function("return false") 
 document.onselectstart=new Function("return false") 
 </script> 
-<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=0 height=0 src="music/1.mp3"></iframe>
+<!-- <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=0 height=0 src="music/1.mp3"></iframe> -->
 
 	<!-- Preloader 
 	<div class="mask"><div id="loader"></div></div>
@@ -222,10 +223,25 @@ document.onselectstart=new Function("return false")
                     	<h5>若间</h5>
                     	<p>核心成员</p>
                         <p class="about-team">研究方向：编程开发 逆向分析</p>                        
-                     
                 	</div>                    
                 </li>
 				
+				<li class="team-person">                
+                	<img src="touxiang/jiulian.jpg" alt="" />                    
+                    <div class="team-profile">                    
+                    	<h5>九练</h5>
+                    	<p>核心成员</p>
+                        <p class="about-team">研究方向：全栈开发工程 架构设计 领域驱动设计 敏捷开发 linux内核<br>Linux嵌入式系统研发工程师，走在桌面应用开发与服务器端开发的路上，夹杂在前端与后端的中间，用树莓派承载的系统，顶着人工智能和物联网旗号。做着底层开发的工作。 w3bsafe官方指定技术渣，请多指教！</p>                        
+                	</div>                    
+                </li>
+				<li class="team-person">                
+                	<img src="touxiang/hanmen.jpg" alt="" />                    
+                    <div class="team-profile">                    
+                    	<h5>寒门</h5>
+                    	<p>核心成员</p>
+                        <p class="about-team">研究方向：渗透测试 移动终端开发 无线安全 内网架构 原生ai技术<br>某不知名小组成员</p>                        
+                	</div>                    
+                </li>
             </ul>				
 			
 		</div>
