--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ document.onselectstart=new Function("return false")
                     <div class="team-profile">                    
                     	<h5>若间</h5>
                     	<p>核心成员</p>
-                        <p class="about-team">研究方向：编程开发 逆向分析</p>                        
+                        <p class="about-team">研究方向：编程开发 逆向分析<br>福州爱梦思创网络科技有限公司创始人兼CTO，十年开发经验</p>                        
                 	</div>                    
                 </li>
 				
