--- a/index.html
+++ b/index.html
@@ -242,6 +242,22 @@ document.onselectstart=new Function("return false")
                         <p class="about-team">研究方向：渗透测试 移动终端开发 无线安全 内网架构 原生ai技术<br>某不知名小组成员</p>                        
                 	</div>                    
                 </li>
+				<li class="team-person">                
+                	<img src="touxiang/mickey_gl.jpg" alt="" />                    
+                    <div class="team-profile">                    
+                    	<h5>Mickey_gl</h5>
+                    	<p>核心成员</p>
+                        <p class="about-team">研究方向：Web安全 主动防御<br>国内知名安全实验室技术带头人，目前专注于工业互联网安全领域</p>                        
+                	</div>                    
+                </li>
+				<li class="team-person">                
+                	<img src="touxiang/chengxiang.jpg" alt="" />                    
+                    <div class="team-profile">                    
+                    	<h5>丞相</h5>
+                    	<p>核心成员</p>
+                        <p class="about-team">研究方向：渗透测试 漏洞挖掘 应急响应 平台运营<br>某市攻防演习特邀专家，i春秋签约作家，支付宝蚂蚁神盾局公开课讲师</p>                        
+                	</div>                    
+                </li>
 				
             </ul>				
 			
