--- a/index.html
+++ b/index.html
@@ -258,7 +258,30 @@ document.onselectstart=new Function("return false")
                         <p class="about-team">研究方向：渗透测试 漏洞挖掘 应急响应 平台运营<br>某市攻防演习特邀专家，i春秋签约作家，支付宝蚂蚁神盾局公开课讲师</p>                        
                 	</div>                    
                 </li>
-				
+				<li class="team-person">                
+                	<img src="touxiang/paopao.jpg" alt="" />                    
+                    <div class="team-profile">                    
+                    	<h5>paopao</h5>
+                    	<p>核心成员</p>
+                        <p class="about-team">研究方向：渗透测试 漏洞挖掘 应急响应 平台运营</p>                        
+                	</div>                    
+                </li>	
+				<li class="team-person">                
+                	<img src="touxiang/n1an.jpg" alt="" />                    
+                    <div class="team-profile">                    
+                    	<h5>N1an_</h5>
+                    	<p>核心成员</p>
+                        <p class="about-team">研究方向：渗透测试 漏洞挖掘 ctf<br>乙方摸鱼三年</p>                        
+                	</div>                    
+                </li>
+				<li class="team-person">                
+                	<img src="touxiang/guairen.jpg" alt="" />                    
+                    <div class="team-profile">                    
+                    	<h5>怪人</h5>
+                    	<p>核心成员</p>
+                        <p class="about-team">研究方向：渗透测试 SEO 漏洞挖掘</p>                        
+                	</div>                    
+                </li>	
             </ul>				
 			
 		</div>
