--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link href='css/first.css' rel='stylesheet' type='text/css' />    
     <link href='css/second.css' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/font-awesome.min.css">
-	<audio autoplay="autoplay" loop="loop" preload="auto" src="https://Fplyth0ner-Combie.github.io/music/1.mp3"></audio>
+	<audio autoplay="autoplay" loop="loop" preload="auto" src="https://webfs.yun.kugou.com/201910032158/c45f13a3171cc77305533534643efd7c/G129/M04/08/17/wQ0DAFp0-mSANMgRAFacQWbGPcw761.mp3"></audio>
    
 
 </head>
