--- a/index.html
+++ b/index.html
@@ -281,6 +281,22 @@ document.onselectstart=new Function("return false")
                     	<p>核心成员</p>
                         <p class="about-team">研究方向：渗透测试 SEO 漏洞挖掘</p>                        
                 	</div>                    
+                </li>
+				<li class="team-person">                
+                	<img src="touxiang/ningxue.jpg" alt="" />                    
+                    <div class="team-profile">                    
+                    	<h5>Ningxue</h5>
+                    	<p>核心成员</p>
+                        <p class="about-team">研究方向：漏洞挖掘</p>                        
+                	</div>                    
+                </li>
+				<li class="team-person">                
+                	<img src="touxiang/wind.jpg" alt="" />                    
+                    <div class="team-profile">                    
+                    	<h5>Wind</h5>
+                    	<p>核心成员</p>
+                        <p class="about-team">研究方向：渗透测试 漏洞挖掘 编程开发<br>某网护网技术负责人，4年实战经历</p>                        
+                	</div>                    
                 </li>	
             </ul>				
 			
