--- a/index.html
+++ b/index.html
@@ -298,6 +298,22 @@ document.onselectstart=new Function("return false")
                         <p class="about-team">研究方向：渗透测试 漏洞挖掘 编程开发<br>某网护网技术负责人，4年实战经历</p>                        
                 	</div>                    
                 </li>	
+				<li class="team-person">                
+                	<img src="touxiang/h4ck.jpg" alt="" />                    
+                    <div class="team-profile">                    
+                    	<h5>H4ck</h5>
+                    	<p>核心成员</p>
+                        <p class="about-team">研究方向：渗透测试 漏洞挖掘 代码审计</p>                        
+                	</div>                    
+                </li>	
+				<li class="team-person">                
+                	<img src="touxiang/fuchen.jpg" alt="" />                    
+                    <div class="team-profile">                    
+                    	<h5>浮尘</h5>
+                    	<p>核心成员</p>
+                        <p class="about-team">研究方向：web安全 漏洞挖掘</p>                        
+                	</div>                    
+                </li>	
             </ul>				
 			
 		</div>
