--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ document.onselectstart=new Function("return false")
                     <p class="light">挖洞<span class="bullet">•</span>审计<span class="bullet">•</span>探索<span class="bullet">•</span>追求<span class="bullet">•</span>超越</p>
                     <a href="#we-are-newave" class="newave-button medium outline white">关于团队</a>
                     <a href="//xss.tf/" class="newave-button medium outline white" target="_blank">XSS平台</a>
-		    <a href="http://blog.w3bsafe.cn/" class="newave-button medium outline white" target="_blank">W3bsafe博客</a>
+		    <a href="http://blog.w3bsafe.cn/" class="newave-button medium outline white" target="_blank">博客</a>
                     </div>
                 
                 </div>
