--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@ document.onselectstart=new Function("return false")
     <div id="footer_ied">
     <div class="wrap_ied">
 	    <p style="font-size:10px">不定期审查友情链接，如未发现反链，我们将撤下友链，恕不另行通知。</p>
-        <p style="font-size:16px">友情链接：<a href="https://0x20h.com/" target="_blank">Sp4ce's Blog</a>|<a href="https://xss.lt/" target="_blank">阿圣XSS平台</a>|<a href="http://www.secbug.org/" target="_blank">破晓团队</a>|<a href="https://www.bugbank.cn/" target="_blank">漏洞银行</a>|<a href="https://bbs.ichunqiu.com/portal.php" target="_blank">i春秋论坛</a>|<a href="http://cdusec.happyhacking.top/" target="_blank">CDUSEC内部博客</a></p>
+        <p style="font-size:16px">友情链接：<a href="https://0x20h.com/" target="_blank">Sp4ce's Blog</a>|<a href="https://xss.lt/" target="_blank">阿圣XSS平台</a>|<a href="http://www.secbug.org/" target="_blank">破晓团队</a>|<a href="https://www.bugbank.cn/" target="_blank">漏洞银行</a>|<a href="https://bbs.ichunqiu.com/portal.php" target="_blank">i春秋论坛</a>|<a href="http://cdusec.happyhacking.top/" target="_blank">CDUSEC内部博客</a>|<a href="http://www.jraqw.cn/" target="_blank">旧人安全团队</a></p>
 		</br>
 		<p class="copyright">&copy;2016-2019  W3bSafe安全团队</p>
     </div>
