--- a/index.html
+++ b/index.html
@@ -315,6 +315,14 @@ document.onselectstart=new Function("return false")
                         <p class="about-team">研究方向：web安全 漏洞挖掘</p>                        
                 	</div>                    
                 </li>	
+				<li class="team-person">                
+                	<img src="touxiang/zhoujun.jpg" alt="" />                    
+                    <div class="team-profile">                    
+                    	<h5>Reder</h5>
+                    	<p>核心成员</p>
+                        <p class="about-team">研究方向：web渗透 漏洞挖掘 ctf</p>                        
+                	</div>                    
+                </li>	
             </ul>				
 			
 		</div>
